--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "telegram-video-bot",
   "version": "1.0.0",
   "description": "A Telegram bot for video calls via Mini App",
-  "main": "bot.js",
+  "main": "server.js",
   "engines": {
     "node": "18.x",
     "npm": "8.x"
@@ -10,12 +10,23 @@
   "scripts": {
     "start": "node server.js",
     "bot": "node bot.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "npm install",
+    "prestart": "if [ ! -d public ]; then mkdir public && echo '<html><body><h1>Video Call App</h1></body></html>' > public/index.html; fi"
   },
   "dependencies": {
     "node-telegram-bot-api": "^0.66.0",
     "express": "^4.18.2",
     "sqlite3": "^5.1.6",
     "cors": "^2.8.5"
-  }
+  },
+  "keywords": [
+    "telegram",
+    "bot",
+    "video-call",
+    "webrtc",
+    "mini-app"
+  ],
+  "author": "Your Name",
+  "license": "MIT"
 }
