--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "node-telegram-bot-api": "^0.66.0",
     "express": "^4.18.2",
     "sqlite3": "^5.1.6",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5"
   },
   "engines": {
-    "node": "18.x",
-    "npm": "8.x"
+    "node": ">=18.x"
   }
 }
