--- a/token_bot.env
+++ b/token_bot.env
@@ -1,2 +1,3 @@
 BOT_TOKEN=8474432468:AAE7xQulaUCRxrCS4iKHxMT3EXXXSHa_ZyQ
-SERVER_URL=http://localhost:3000
+SERVER_URL=https://telegram-video-bot-vvfl.onrender.com
+PORT=3000
