--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "name": "telegram-video-bot",
   "version": "1.0.0",
-  "description": "Telegram bot for video calls",
-  "main": "start.js",
+  "description": "Telegram bot for video calls in Mini App",
+  "main": "bot.js",
   "scripts": {
-    "start": "node start.js",
-    "build": "npm install",
-    "dev": "nodemon start.js"
+    "start": "node bot.js & node server.js",
+    "dev": "nodemon bot.js"
   },
   "dependencies": {
     "node-telegram-bot-api": "^0.66.0",
-    "express": "^4.18.2",
     "sqlite3": "^5.1.6",
+    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "uuid": "^9.0.1"
   },
   "engines": {
-    "node": ">=18.x"
+    "node": ">=16.x"
   }
 }
