--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "description": "Telegram bot for video calls in Mini App",
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js & node server.js",
-    "dev": "nodemon bot.js"
+    "start": "node start.js",
+    "dev": "nodemon start.js",
+    "bot": "node bot.js",
+    "server": "node server.js",
+    "build": "npm install"
   },
   "dependencies": {
     "node-telegram-bot-api": "^0.66.0",
     "sqlite3": "^5.1.6",
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "uuid": "^9.0.1"
+    "dotenv": "^16.4.5"
   },
   "engines": {
     "node": ">=16.x"
