--- a/render.yaml
+++ b/render.yaml
@@ -8,8 +8,7 @@ services:
     envVars:
       - key: BOT_TOKEN
         sync: false
-      - key: SERVER_URL
-        fromService:
-          name: telegram-video-bot
-          type: web
-          property: url
+      - key: WEB_APP_URL
+        sync: false
+      - key: PORT
+        value: 10000
